--- a/styles/main.css
+++ b/styles/main.css
@@ -352,7 +352,7 @@ a:hover::before {
 .event-thumbnail{
   display: flex;
   flex-flow: column;
-  max-width: 500px;
+  max-width: 600px;
   height: 100%;
 }
 .event-details {
@@ -370,6 +370,7 @@ a:hover::before {
   height: 100%;
   object-fit: cover;
   border-radius: 25px;
+  padding: 30px;
 }
 .event-details h3 {
   font-size: var(--fontSizes-4xl);
@@ -921,3 +922,38 @@ a:hover::before {
   width: 24px;
   margin-right: 10px;
 }
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+}
+
+.modal-content {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)); /* Gradient black */
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
